Fix build (class not compatible with placeins)

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -8,7 +8,7 @@
 
 \usepackage{hyperref}
 
-\usepackage[section]{placeins}
+% \usepackage{placeins}
 
 % \usepackage{float}
 
@@ -140,7 +140,7 @@ Please note that the default parameters, and semi-automated learning parameters 
   \label{fig:overview}
 \end{figure*}
 
-\FloatBarrier
+% \FloatBarrier
 
 \section{The example of the \jc framework}
 \label{sec:juliaconstraints}
